site: style: Fix style on mobile devices (part 4)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,6 +52,7 @@
     }
 
     @include media-query($on-palm) {
+        color: $text-color;
         position: absolute;
         top: 9px;
         right: 30px;
